--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/date"
@@ -19,6 +18,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/meal_pre" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/meal_default_date"
+            android:textAlignment="center"
+            android:id="@+id/textView_date"
+            android:layout_weight="2" />
 
         <Button
             android:id="@+id/next"
