--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,16 +16,24 @@
         android:id="@+id/username"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:hint="用户名"
-        android:text="am30467" />
+        android:hint="用户名"/>
+        <!--android:text="am30467"-->
 
     <EditText
         android:id="@+id/psd"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:hint="密码"
-        android:inputType="textPassword"
-        android:text="123456" />
+        android:inputType="textPassword" />
+        <!--android:text="123456" -->
+
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="记住密码"
+        android:id="@+id/checkBox_save"
+        android:layout_gravity="center_horizontal" />
 
     <Button
         android:id="@+id/login"
